src/test/ui/unsized/unsized-bare-typaram.stderr
error[E0277]: the size for values of type `T` cannot be known at compilation time
  --> $DIR/unsized-bare-typaram.rs:2:29
   |
LL | fn bar<T: Sized>() { }
   |        - required by this bound in `bar`
LL | fn foo<T: ?Sized>() { bar::<T>() }
   |        -                    ^ doesn't have a size known at compile-time
   |        |
   |        this type parameter needs to be `std::marker::Sized`
   |
   = help: the trait `std::marker::Sized` is not implemented for `T`
   = note: to learn more, visit <https://doc.rust-lang.org/book/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
